interface/web/themes/default/assets/stylesheets/ispconfig.css
body {
  overflow-y: scroll;
  overflow-x: hidden; }

.left {
  float: left; }

.right {
  float: right; }

.clear:after {
  content: "";
  display: table;
  clear: both; }

.marginTop15 {
  margin-top: 15px; }

.paddingX5 {
  padding-left: 5px !important;
  padding-right: 5px !important; }

.width65 {
  width: 65px; }

.form-group input[type='checkbox'] {
  margin-top: 10px; }

.form-group .checkbox-inline input[type='checkbox'] {
  margin-top: 4px; }

.control-label {
  font-weight: normal; }
  .control-label:after {
    content: ":"; }

.control-label-plain:after {
    content: ""; }

.inlineLabel {
  font-weight: 400;
}

.formbutton-default {
  padding: 6px 10px;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  font-size: 12px;
  font-weight: bold;
  transition: all ease 500ms; }

.formbutton-success,
.formbutton-danger {
  padding: 6px 30px;
  border-style: solid;
  border-width: 1px;
  border-bottom-width: solid;
  font-size: 12px;
  font-weight: bold;
  transition: all ease 500ms; }

.formbutton-narrow {
  padding: 6px 8px;
  margin-left: 2px;
  margin-right: 2px; }

.formbutton-narrower {
  padding: 4px 6px; }

#main-wrapper {
  margin: 0 auto;
  width: 95%;
  max-width: 1260px; }

#logo {
  float: left;
  width: 200px;
  height: 65px;
  margin-top:10px;
  /*background: url("../images/logo.png") no-repeat;*/ }
  #logo a {
    display: block;
    width: 100%;
    height: 100%; }

#headerbar {
  float: right;
  }

#searchform {
  float: right;
  margin-top: 16px; }
  #searchform > div {
    position: relative;
    display: table; }
    #searchform > div > div {
      display: table-cell;
      padding-right: 8px;
      vertical-align: top; }
  #searchform .icon {
    padding: 0 2px;
    font-size: 16px; }

#logout-button {
  float: right;
  margin-top: 16px;
  margin-left: 25px;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  transition: all ease 500ms; }

#main-navigation {
  margin-top: 24px; }
  #main-navigation a {
    padding: 0 12px;
    height: 70px;
    border-bottom-style: solid;
    botder-bottom-width: 2px;
    transition: all ease 500ms; }
  #main-navigation .icon {
    font-size: 32px; }
  #main-navigation .title {
    margin-top: 2px;
    font-weight: bold; }

.btn-group-justified .btn {
  border-right-width: 0; }
  .btn-group-justified .btn:last-of-type {
    border-right-width: 1px; }

#content {
  width: 78%; }

#passBar, #passText {
  display: inline-block;
  vertical-align: middle; }

#passBar {
  height: 11px;
  padding: 0; }

#passBar > div {
  height: 100%;
  padding: 0; }

#sidebar {
  margin-top: 27px;
  min-width: 18%;
  max-width: 21%;
  width: auto;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px; }
  #sidebar header {
    margin: 1px;
    padding: 0 10px;
    min-height: 40px;
    line-height: 40px;
    font-weight: bold;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px; }
  #sidebar ul {
    margin: 0;
    padding: 0;
    list-style: none; }
  #sidebar li {
    border-top-style: solid;
    border-top-width: 1px;
    font-size: 12px; }
  #sidebar a {
    display: block;
    padding: 10px;
    text-decoration: none;
    transition: color ease 500ms; }
    #sidebar header a {
		padding: 0; }

#select_server a {
  padding:0 10px; }

.page-header {
  margin: 20px 0;
  padding: 0; }

.alert-notification a {
  font-weight: bold;
  text-decoration: none;
  transition: color ease 500ms; }

.alert-label, .alert-content {
  display: inline-block;
  vertical-align: top; }

.alert-label {
  width: 60px; }

.modules {
  margin: 0;
  padding: 0;
  list-style: none; }
  .modules li {
    float: left;
    margin-right: 15px;
    margin-bottom: 15px;
    padding: 8px;
    width: 200px;
    border-radius: 4px;
    border-style: solid;
    border-width: 1px; }
  .modules .icon {
    float: left;
    margin-right: 15px;
    font-size: 50px; }
  .modules .left {
    margin-top: 5px; }
  .modules .title {
    margin-top: 6px;
    margin-left: 20px;
    font-size: 16px;
    font-weight: bold; }
  .modules .button {
    margin-top: 10px;
    width: 100%;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-size: 12px;
    font-weight: bold;
    transition: all ease 500ms; }
  .modules a {
    text-decoration: none; }

.table-wrapper {
  margin-bottom: 20px;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px; }

.table {
  table-layout: fixed;
  margin-bottom: 1px;
  }
.table caption {
	padding: 5px 10px;
	text-align: left;
	font-weight: bold;
	font-size: 18px;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	}
.table tbody tr {
	border-top-style: solid;
	border-top-width: 1px;
	transition: background ease 500ms;
	}
.table tbody tr:last-child {
	border-radius: 4px;
	}
.table tbody tr td {
	text-overflow: ellipsis;
	overflow-x: hidden;
	}

.table-auto {
	table-layout: auto;
}

.tfooter {
  margin-top: -1px;
  height: 40px;
  border-top-style: solid;
  border-top-width: 1px; }

.pagination {
  margin: 10px 0; }

.progress {
  display: inline-block;
  margin-bottom: 0;
  width: 150px;
  height: 10px; }

p.fieldset-legend {
  display: none; }

.content-tab-wrapper {
  border-style: solid;
  border-width: 1px;
  border-radius: 4px; }
  .content-tab-wrapper .nav-tabs > li > a {
    border-radius: 0;
    border: none !important;
    border-right-style: solid !important;
    border-right-width: 1px !important;
    outline: none;
    font-weight: bold;
    transition: background ease 500ms; }
  .content-tab-wrapper .nav-tabs li:not(:first-child) a {
    margin-left: -2px; }

.tab-content {
  padding: 25px 10px; }

.input-group-btn .icon-calendar {
  font-size: 18px; }

thead.dark th {
  height: 40px;
  line-height: 40px;
  font-weight: normal; }

thead.dark th.small-col {
  width: 14%; }

thead.dark th.tiny-col {
  width: 8%;
  overflow: hidden;
  text-overflow: ellipsis; }

thead.dark th[data-column] {
  cursor: pointer;
}
/* ... */

